emergency fix: fixed navbar checkbox visibility

--- a/assets/styl.css
+++ b/assets/styl.css
@@ -76,6 +76,9 @@ nav{
 #navshow{
     display:none;
 }
+#nb,#nbl{
+    width:0px;height:0px;
+}
 @media only screen and (max-width:1300px){
     :root{
         --navwidth:20%;
